--- a/intro-component-with-signup-form-master/index.html
+++ b/intro-component-with-signup-form-master/index.html
@@ -10,6 +10,16 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
+    body {
+      max-height: 74vh;
+      max-width: 100%;
+    }
+
+    .container {
+      display: flex;
+      border: 1px solid red;
+      padding: 2rem 2rem;
+    }
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
@@ -17,10 +27,13 @@
 <body>
   <div class="container">
     <div class="left">
-      Learn to code by watching others
-
-      See how experienced developers solve problems in real-time. Watching scripted tutorials is great,
-      but understanding how developers think is invaluable.
+      <div class="title">
+        Learn to code by watching others
+      </div>
+      <div class="text">
+        See how experienced developers solve problems in real-time. Watching scripted tutorials is great,
+        but understanding how developers think is invaluable.
+      </div>
     </div>
     <div class="right">
       <div class="title">
