container added margin and padding

--- a/intro-component-with-signup-form-master/index.html
+++ b/intro-component-with-signup-form-master/index.html
@@ -18,7 +18,8 @@
     .container {
       display: flex;
       border: 1px solid red;
-      padding: 2rem 2rem;
+      margin: 7rem 4rem;
+      padding: 5rem 5rem;
     }
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
