--- a/intro-component-with-signup-form-master/index.html
+++ b/intro-component-with-signup-form-master/index.html
@@ -17,9 +17,14 @@
 
     .container {
       display: flex;
-      border: 1px solid red;
+      border: 3px solid blue;
       margin: 7rem 4rem;
       padding: 5rem 5rem;
+      background-color: hsl(0, 100%, 74%) ;
+    }
+
+    .left {
+      max-width: 50%;
     }
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
@@ -29,30 +34,30 @@
   <div class="container">
     <div class="left">
       <div class="title">
-        Learn to code by watching others
+        <h1>Learn to code by watching others</h1>
       </div>
       <div class="text">
-        See how experienced developers solve problems in real-time. Watching scripted tutorials is great,
-        but understanding how developers think is invaluable.
+        <h4>See how experienced developers solve problems in real-time. Watching scripted tutorials is great,
+          but understanding how developers think is invaluable.</h4>
       </div>
     </div>
     <div class="right">
       <div class="title">
-        Try it free 7 days then $20/mo. thereafter
+        <h3>Try it free 7 days then $20/mo. thereafter</h3>
       </div>
       <div class="form">
-        First Name
-        Last Name
-        Email Address
-        Password
+        <h3>First Name</h3>
+        <h3>Last Name</h3>
+        <h3>Email Address</h3>
+        <h3>Password</h3>
       </div>
       <div class="button">
         <button>
-          Claim your free trial
+          <h3>Claim your free trial</h3>
         </button>
       </div>
       <div class="small-text">
-        By clicking the button, you are agreeing to our Terms and Services
+        <p>By clicking the button, you are agreeing to our Terms and Services</p>
       </div>
     </div>
   </div>
@@ -60,7 +65,7 @@
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="https://www.kristijan-federer.com">Kristijan Federer</a>.
     </p>
   </footer>
 </body>
