--- a/intro-component-with-signup-form-master/index.html
+++ b/intro-component-with-signup-form-master/index.html
@@ -1,72 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <title>Frontend Mentor | Intro component with sign up form</title>
+    <title>Frontend Mentor | Intro component with sign up form</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    body {
-      max-height: 74vh;
-      max-width: 100%;
-    }
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
+      body {
+        max-height: 74vh;
+        max-width: 100%;
+      }
 
-    .container {
-      display: flex;
-      border: 3px solid blue;
-      margin: 7rem 4rem;
-      padding: 5rem 5rem;
-      background-color: hsl(0, 100%, 74%) ;
-    }
+      .container {
+        display: flex;
+        border: 3px solid blue;
+        margin: 7rem 4rem;
+        padding: 5rem 5rem;
+        background-color: hsl(0, 100%, 74%);
+      }
 
-    .left {
-      max-width: 50%;
-    }
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <div class="left">
-      <div class="title">
-        <h1>Learn to code by watching others</h1>
+      .left {
+        max-width: 50%;
+      }
+
+      form {
+        display: flex;
+        flex-direction: column;
+      }
+
+      
+      .attribution {
+        font-size: 11px;
+        text-align: center;
+      }
+      .attribution a {
+        color: hsl(228, 45%, 44%);
+      }
+    </style>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <div class="container">
+      <div class="left">
+        <div class="title">
+          <h1>Learn to code by watching others</h1>
+        </div>
+        <div class="text">
+          <h4>
+            See how experienced developers solve problems in real-time. Watching
+            scripted tutorials is great, but understanding how developers think
+            is invaluable.
+          </h4>
+        </div>
       </div>
-      <div class="text">
-        <h4>See how experienced developers solve problems in real-time. Watching scripted tutorials is great,
-          but understanding how developers think is invaluable.</h4>
+      <div class="right">
+        <div class="title">
+          <h3>Try it free 7 days then $20/mo. thereafter</h3>
+        </div>
+        <form>
+          <div class="form-group">
+            <label for="First Name"></label>
+            <input type="text" class="form-control" id="inputFirstName" placeholder="First Name" />
+          </div>
+          <div class="form-group"></div>
+            <label for="Last Name"></label>
+            <input type="text" class="form-control" id="inputLastName" placeholder="Last Name" />
+          </div>
+            <div class="form-group">
+            <label></label>
+            <input type="text" class="form-control" id="inputEmail" placeholder="Email Address" />
+          </div>
+            <div class="form-group"></div>
+            <label></label>
+            <input type="text" class="form-control" id="inputPassword" placeholder="Password" />
+          </div>
+        </form>
+        <div class="button">
+          <button>
+            <h3>Claim your free trial</h3>
+          </button>
+        </div>
+        <div class="small-text">
+          <p>
+            By clicking the button, you are agreeing to our Terms and Services
+          </p>
+        </div>
       </div>
     </div>
-    <div class="right">
-      <div class="title">
-        <h3>Try it free 7 days then $20/mo. thereafter</h3>
-      </div>
-      <div class="form">
-        <h3>First Name</h3>
-        <h3>Last Name</h3>
-        <h3>Email Address</h3>
-        <h3>Password</h3>
-      </div>
-      <div class="button">
-        <button>
-          <h3>Claim your free trial</h3>
-        </button>
-      </div>
-      <div class="small-text">
-        <p>By clicking the button, you are agreeing to our Terms and Services</p>
-      </div>
-    </div>
-  </div>
 
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="https://www.kristijan-federer.com">Kristijan Federer</a>.
-    </p>
-  </footer>
-</body>
+    <footer>
+      <p class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by
+        <a href="https://www.kristijan-federer.com">Kristijan Federer</a>.
+      </p>
+    </footer>
+
+    <!-- JS first, then Bootstrap script -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  </body>
 </html>
