--- a/intro-component-with-signup-form-master/index.html
+++ b/intro-component-with-signup-form-master/index.html
@@ -14,6 +14,12 @@
 
     <title>Frontend Mentor | Intro component with sign up form</title>
 
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
       body {
@@ -33,12 +39,31 @@
         max-width: 50%;
       }
 
+      .right {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+      }
+
+      .r-title {
+        border: 1px solid green;
+        height: 5vh;
+        width: 100%;
+      }
+
       form {
         display: flex;
         flex-direction: column;
       }
 
-      
+      .form-control {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 5vh;
+      }
+
       .attribution {
         font-size: 11px;
         text-align: center;
@@ -47,12 +72,6 @@
         color: hsl(228, 45%, 44%);
       }
     </style>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-      crossorigin="anonymous"
-    />
   </head>
   <body>
     <div class="container">
@@ -69,31 +88,34 @@
         </div>
       </div>
       <div class="right">
-        <div class="title">
-          <h3>Try it free 7 days then $20/mo. thereafter</h3>
+        <div class="subscription">
+          <button type="button" class="btn btn-primary">Try it free 7 days then $20/mo. thereafter</button>
         </div>
-        <form>
-          <div class="form-group">
-            <label for="First Name"></label>
-            <input type="text" class="form-control" id="inputFirstName" placeholder="First Name" />
-          </div>
-          <div class="form-group"></div>
-            <label for="Last Name"></label>
-            <input type="text" class="form-control" id="inputLastName" placeholder="Last Name" />
-          </div>
+        <div class="form-wrapper">
+
+          <form>
             <div class="form-group">
-            <label></label>
-            <input type="text" class="form-control" id="inputEmail" placeholder="Email Address" />
-          </div>
+              <label for="First Name"></label>
+              <input type="text" class="form-control" id="inputFirstName" placeholder="First Name" />
+            </div>
             <div class="form-group"></div>
-            <label></label>
-            <input type="text" class="form-control" id="inputPassword" placeholder="Password" />
+              <label for="Last Name"></label>
+              <input type="text" class="form-control" id="inputLastName" placeholder="Last Name" />
+            </div>
+              <div class="form-group">
+              <label></label>
+              <input type="text" class="form-control" id="inputEmail" placeholder="Email Address" />
+            </div>
+              <div class="form-group"></div>
+              <label></label>
+              <input type="text" class="form-control" id="inputPassword" placeholder="Password" />
+            </div>
+          </form>
+          <div class="button">
+            <button type="button" class="btn btn-success">
+              Claim your free trial
+            </button>
           </div>
-        </form>
-        <div class="button">
-          <button>
-            <h3>Claim your free trial</h3>
-          </button>
         </div>
         <div class="small-text">
           <p>
