--- a/intro-component-with-signup-form-master/index.html
+++ b/intro-component-with-signup-form-master/index.html
@@ -41,20 +41,29 @@
 
       .right {
         display: flex;
-        justify-content: center;
+        justify-content: space-between;
         align-items: center;
         flex-direction: column;
+        margin: 1rem 1.5rem;
+        border: 1px solid blue;
+        max-height: 100%;
+        max-width: 100%;
       }
 
-      .r-title {
-        border: 1px solid green;
+      .subscription {
         height: 5vh;
         width: 100%;
+        margin-bottom: 1rem;
       }
 
-      form {
+      .form-wrapper {
         display: flex;
         flex-direction: column;
+        margin: 1rem 0;
+        border: 1px solid green;
+        background: azure;
+        max-height: max-content;
+        max-width: fit-content;
       }
 
       .form-control {
@@ -62,6 +71,23 @@
         justify-content: center;
         align-items: center;
         height: 5vh;
+      }
+
+      .form {
+        height: 70%;
+      }
+
+      .button {
+        position: fixed;
+        bottom: 15%;
+        right: 30%;
+
+      }
+
+      .small-text {
+        position: fixed;
+        bottom: 5%;
+        right: 30%;
       }
 
       .attribution {
@@ -92,23 +118,22 @@
           <button type="button" class="btn btn-primary">Try it free 7 days then $20/mo. thereafter</button>
         </div>
         <div class="form-wrapper">
-
           <form>
             <div class="form-group">
               <label for="First Name"></label>
               <input type="text" class="form-control" id="inputFirstName" placeholder="First Name" />
             </div>
-            <div class="form-group"></div>
+            <div class="form-group">
               <label for="Last Name"></label>
               <input type="text" class="form-control" id="inputLastName" placeholder="Last Name" />
             </div>
-              <div class="form-group">
-              <label></label>
+            <div class="form-group">
+              <label for="email"></label>
               <input type="text" class="form-control" id="inputEmail" placeholder="Email Address" />
             </div>
-              <div class="form-group"></div>
-              <label></label>
-              <input type="text" class="form-control" id="inputPassword" placeholder="Password" />
+            <div class="form-group">
+                <label for="Password"></label>
+                <input type="text" class="form-control" id="inputPassword" placeholder="Password" />
             </div>
           </form>
           <div class="button">
@@ -116,11 +141,11 @@
               Claim your free trial
             </button>
           </div>
-        </div>
-        <div class="small-text">
-          <p>
-            By clicking the button, you are agreeing to our Terms and Services
-          </p>
+          <div class="small-text">
+            <p>
+              By clicking the button, you are agreeing to our Terms and Services
+            </p>
+          </div>
         </div>
       </div>
     </div>
