subscription button done

--- a/intro-component-with-signup-form-master/index.html
+++ b/intro-component-with-signup-form-master/index.html
@@ -31,7 +31,7 @@
         display: flex;
         border: 3px solid blue;
         margin: 7rem 4rem;
-        padding: 5rem 5rem;
+        padding: 5rem 2rem;
         background-color: hsl(0, 100%, 74%);
       }
 
@@ -47,13 +47,17 @@
         margin: 1rem 1.5rem;
         border: 1px solid blue;
         max-height: 100%;
-        max-width: 100%;
+        width: 60%;
+        background: green;
       }
 
       .subscription {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         height: 5vh;
         width: 100%;
-        margin-bottom: 1rem;
+        padding: 2rem 0;
       }
 
       .form-wrapper {
@@ -78,14 +82,12 @@
       }
 
       .button {
-        position: fixed;
         bottom: 15%;
         right: 30%;
 
       }
 
       .small-text {
-        position: fixed;
         bottom: 5%;
         right: 30%;
       }
