form-container, css styling

--- a/intro-component-with-signup-form-master/index.html
+++ b/intro-component-with-signup-form-master/index.html
@@ -62,26 +62,31 @@
 
       .form-wrapper {
         display: flex;
+        justify-content: center;
+        align-items: center;
         flex-direction: column;
         margin: 1rem 0;
         border: 1px solid green;
         background: azure;
         max-height: max-content;
-        max-width: fit-content;
+        width: 70%;
+        border-radius: 5%;
       }
 
-      .form-control {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 5vh;
+      form {
+        height: 90%;
+        width: 90%;
+        padding-bottom: 2rem;
       }
 
-      .form {
-        height: 70%;
+      .form-group {
+        height: 6vh;
+        width: 70%;
       }
+
 
       .button {
+        width: 90%;
         bottom: 15%;
         right: 30%;
 
